--- a/IPTVPlayer/locale/de/LC_MESSAGES/IPTVPlayer.po
+++ b/IPTVPlayer/locale/de/LC_MESSAGES/IPTVPlayer.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.2\n"
+"X-Generator: Poedit 2.0.3\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Poedit-SearchPath-0: ../plugin\n"
@@ -3594,3 +3594,18 @@ msgstr "Als gesehen entmarkieren"
 
 msgid "Set watched"
 msgstr "Als gesehen markieren"
+
+msgid "The color of the viewed item"
+msgstr "Farbauswahl für gesehene Einträge"
+
+msgid "Show paid items (it may be illegal)"
+msgstr "Plus-Bezahlinhalte anzeigen (könnte illegal sein)"
+
+msgid "Show items with DRM"
+msgstr "DRM geschützte Inhalte anzeigen"
+
+msgid "Items with DRM protection."
+msgstr "Inhalt ist DRM geschützt."
+
+msgid "Video with DRM protection."
+msgstr "Inhalt ist DRM geschützt."
